--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kawan's S.A.C.C</title>
+  <title>KAWAN-67 Drone</title>
   <link rel="stylesheet" href="style.css">
   <style>
     @font-face {
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Kawan's S.A.C.C</h1>
+  <h1>KAWAN-67</h1>
   <div class="upload-section">
     <input type="file" id="fileInput" accept="image/*">
     <button id="uploadBtn">Upload</button>
@@ -38,3 +38,4 @@
   <script src="popup.js"></script>
 </body>
 </html>
+
